@startuml
title Sueca - Diagrama ER (Persistência)

hide methods
skinparam classAttributeIconSize 0

entity "ROOM" as ROOM {
  * id : UUID <<PK>>
  --
  host_id : UUID <<FK>>
  status : VARCHAR
  game_id : UUID <<FK>>
  created_at : TIMESTAMP
}

entity "PLAYER" as PLAYER {
  * id : UUID <<PK>>
  --
  name : VARCHAR
  type : VARCHAR
}

entity "ROOM_PLAYER" as ROOM_PLAYER {
  * room_id : UUID <<PK,FK>>
  * player_id : UUID <<PK,FK>>
  --
  joined_at : TIMESTAMP
}

entity "GAME" as GAME {
  * id : UUID <<PK>>
  --
  room_id : UUID <<FK>>
  trump_suit : VARCHAR
  turn_player_id : UUID <<FK>>
  status : VARCHAR
  tricks_played : INT
  created_at : TIMESTAMP
}

entity "TEAM" as TEAM {
  * id : UUID <<PK>>
  --
  game_id : UUID <<FK>>
  score : INT
}

entity "TEAM_PLAYER" as TEAM_PLAYER {
  * team_id : UUID <<PK,FK>>
  * player_id : UUID <<PK,FK>>
  --
  seat : INT
}

entity "CARD" as CARD {
  * id : UUID <<PK>>
  --
  suit : VARCHAR
  rank : VARCHAR
}

entity "HAND_CARD" as HAND_CARD {
  * game_id : UUID <<PK,FK>>
  * player_id : UUID <<PK,FK>>
  * card_id : UUID <<PK,FK>>
  --
  position : INT
}

entity "TRICK" as TRICK {
  * id : UUID <<PK>>
  --
  game_id : UUID <<FK>>
  trick_index : INT
  leader_player_id : UUID <<FK>>
  lead_suit : VARCHAR
}

entity "PLAY" as PLAY {
  * id : UUID <<PK>>
  --
  trick_id : UUID <<FK>>
  player_id : UUID <<FK>>
  card_id : UUID <<FK>>
  play_order : INT
}

entity "EVENT" as EVENT {
  * id : UUID <<PK>>
  --
  game_id : UUID <<FK>>
  type : VARCHAR
  timestamp : TIMESTAMP
  payload_json : JSON
}

'========================
' Relationships
'========================
ROOM ||--o{ ROOM_PLAYER : has
PLAYER ||--o{ ROOM_PLAYER : joins

ROOM ||--o| GAME : starts
GAME ||--o{ TEAM : contains
TEAM ||--o{ TEAM_PLAYER : has
PLAYER ||--o{ TEAM_PLAYER : belongs

GAME ||--o{ HAND_CARD : deals
PLAYER ||--o{ HAND_CARD : holds
CARD ||--o{ HAND_CARD : is

GAME ||--o{ TRICK : has
TRICK ||--o{ PLAY : includes
PLAYER ||--o{ PLAY : plays
CARD ||--o{ PLAY : used

GAME ||--o{ EVENT : emits
@enduml